--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "repl_nix_smart_agriculture_system"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 flask = "^3.0.0"
+flask-pymongo = "^2.3.0"
 
 
 [build-system]
