--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ packages = [{include = "repl_nix_profile_jayakrishna"}]
 python = "^3.10"
 flask = "^3.0.0"
 flask-pymongo = "^2.3.0"
+numpy="^1.18.5"
+pandas="^1.0.5"
+scikit-learn="^0.23.1"
+dotenv
 
 
 [build-system]
